# visilib

./: .gitignore  CMakeLists.txt  README.md
DearIMGUI/: CMakeLists.txt
demo/: CMakeLists.txt  demo_debug_visualisation_gl.cpp  demo_helper.cpp  demo_helper.h  demo_main.cpp  demo_viewer_glut.h
doc/: doxygen.cfg
doc/html/: annotated.html  classes.html  classvisilib_1_1_geometry_a_a_b_b-members.html  classvisilib_1_1_geometry_a_a_b_b.html  classvisilib_1_1_geometry_convex_hull-members.html  classvisilib_1_1_geometry_convex_hull.html  classvisilib_1_1_geometry_convex_hull_builder-members.html  classvisilib_1_1_geometry_convex_hull_builder.html  classvisilib_1_1_geometry_convex_polygon-members.html  classvisilib_1_1_geometry_convex_polygon.html  classvisilib_1_1_geometry_occluder_set-members.html  classvisilib_1_1_geometry_occluder_set.html  classvisilib_1_1_geometry_ray-members.html  classvisilib_1_1_geometry_ray.html  classvisilib_1_1_helper_geometry_scene_reader-members.html  classvisilib_1_1_helper_geometry_scene_reader.html  classvisilib_1_1_helper_scoped_timer.html  (+139 more)
test/: CMakeLists.txt
visilib/: CMakeLists.txt  geometry_convex_polygon.h  helper_statistic_collector.h  helper_visual_debugger.h  math_arithmetic.h  math_geometry.h  math_gmp_float.h  math_gmp_rational.h  math_mpfr.h  math_predicates.h  math_real_expr.h  math_vector_3.h  plucker_polytope.h  plucker_polytope_splitter.h  silhouette.h  silhouette_container.h  silhouette_processor.h  visibility_aperture_finder.h  visibility_exact_query.h  visibility_solver.h  visilib.h  visilib.hpp  visilib_core.h
(+117 files in other folders)
